[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinitaivas-live"
version = "0.1.0"
description = "Live streaming data collection from Bluesky"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md", content-type = "text/markdown" }

authors = [
  { name = "Letizia Iannucci", email = "letizia.iannucci@aalto.fi" },
]

keywords = ["bluesky", "firehose", "data-collection", "real-time", "streaming", "social-media", "data-engineering"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

requires-python = ">=3.11"

dependencies = [
  "atproto~=0.0.54",
  "click~=8.1.7",
  "httpx~=0.27.2",
  "loguru~=0.7.2",
  "requests~=2.32.3",
  "tenacity~=9.0.0",
]

[project.scripts]
sinitaivas-live = "sinitaivas_live.main:main"

[project.optional-dependencies]
dev = [
  "bandit~=1.8.3",
  "black~=25.1.0",
  "coverage~=7.6.8",
  "mypy~=1.14.1",
  "pip_audit~=2.7.3",
  "pytest~=8.3.4",
  "ruff~=0.11.0",
  "types-requests~=2.32.0",
  "types-tqdm~=4.67.0",
]

[tool.setuptools.packages.find]
include = [
    "sinitaivas_live*",
    "utils*",
]
exclude = ["tests*"]
